--- a/input/to-do-list/style.css
+++ b/input/to-do-list/style.css
@@ -77,6 +77,7 @@ input[type='checkbox']:checked + label {
 
 #close-btn {
   background-color: lightgray;
+  transition: all 0.5 ease-in-out;
 }
 
 #yes-btn {
@@ -86,6 +87,12 @@ input[type='checkbox']:checked + label {
 #no-btn {
   background-color: lightblue;
   margin-left: 10px;
+}
+
+#close-btn:hover,
+#yes-btn:hover,
+#no-btn:hover {
+  border: 1px solid #000;
 }
 
 .show-modal {
