--- a/input/to-do-list/style.css
+++ b/input/to-do-list/style.css
@@ -31,17 +31,11 @@ input[type='checkbox']:checked + label {
   text-decoration-line: line-through;
 }
 
-.main-bg {
-  background-color: #f6f6f6;
-  width: 100%;
-  height: 100vh;
-}
-
 /* modal */
 .black-bg {
+  position: fixed;
   width: 100%;
   height: 100%;
-  position: fixed;
   background: rgba(0, 0, 0, 0.5);
   z-index: 5;
 
@@ -102,79 +96,98 @@ input[type='checkbox']:checked + label {
   opacity: 1;
 }
 
+/* main */
+.main-bg {
+  background-color: #f6f6f6;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.todo-wrap {
+  width: 50%;
+  height: 100vh;
+  margin: 150px auto;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.input-wrap > h1 {
+  font-weight: 900;
+}
+
+.input-box {
+  width: 100%;
+}
+
+#input-txt {
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  font-size: 15px;
+  border: 3px solid #000;
+}
+
+.plus-btn {
+  width: 40px;
+  height: 40px;
+  border: none;
+  background: #000;
+  color: #fff;
+}
+
+.list-wrap {
+  margin-top: 30px;
+}
+
+/* .list-wrap > ul li + li {
+  margin-top: 10px;
+} */
+
+.list-item {
+  padding: 5px;
+  background-color: #fff;
+  box-shadow: 0px 3px 5px #ccc;
+}
+
+.chk-box {
+  padding: 5px;
+}
+
+.chk-label {
+  padding: 10px;
+}
+
+.del-btn {
+  width: 40px;
+  height: 40px;
+  border: none;
+  background: transparent;
+  color: #000;
+  font-weight: bolder;
+}
+
+.del-btn > div {
+  margin: 0 auto;
+  width: 15px;
+  height: 3px;
+  background-color: #000;
+}
+
 /* 모바일 CSS */
+@media screen and (max-width: 1023px) {
+  .todo-wrap {
+    width: 60%;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .todo-wrap {
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 150px;
-  }
-
-  .flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .input-wrap > h1 {
-    font-weight: 900;
-  }
-
-  .input-box {
-    margin-top: 10px;
-  }
-
-  #input-txt {
-    width: 68vw;
-    height: 40px;
-    padding: 10px;
-    font-size: 15px;
-    border: 3px solid #000;
-  }
-
-  .plus-btn {
-    width: 40px;
-    height: 40px;
-    border: none;
-    background: #000;
-    color: #fff;
-  }
-
-  .list-wrap {
-    margin-top: 30px;
-  }
-
-  .list-wrap > ul li + li {
-    margin-top: 10px;
-  }
-
-  .list-item {
-    padding: 5px;
-    background-color: #fff;
-    box-shadow: 0px 3px 5px #ccc;
-  }
-
-  .chk-box {
-    padding: 5px;
-  }
-
-  .chk-label {
-    padding: 10px;
-  }
-
-  .del-btn {
-    width: 40px;
-    height: 40px;
-    border: none;
-    background: transparent;
-    color: #000;
-    font-weight: bolder;
-  }
-
-  .del-btn > div {
-    margin: 0 auto;
-    width: 15px;
-    height: 3px;
-    background-color: #000;
+    width: 70%;
   }
 }
