--- a/input/to-do-list/style.css
+++ b/input/to-do-list/style.css
@@ -107,7 +107,8 @@ input[type='checkbox']:checked + label {
 .todo-wrap {
   width: 50%;
   height: 100vh;
-  margin: 150px auto;
+  margin: 0 auto;
+  padding: 100px 0;
 }
 
 .flex {
